tester/src/test/aya/failure/ulf-hole-illtype.aya.txt
In file $FILE:6:30 ->

  4 | def test
  5 |  (F : \Pi \Set -> \Set)
  6 |  (g : \Pi (X : F _) -> F (Neg X)) : Nat => g zero
                                    ^^
  
Error: The expected type `\Type` does not match the actual type `F {_?}`
Tycking interrupted due to errors.
What are you doing?
